--- a/app/src/main/res/layout/fragment_iot.xml
+++ b/app/src/main/res/layout/fragment_iot.xml
@@ -1,74 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.iot.IOTFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/settings"
-            android:layout_width="31dp"
-            android:layout_height="31dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:contentDescription="@string/imgArticle"
-            android:src="@drawable/ic_baseline_settings_24"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/iv_profile_image"
-            android:layout_width="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/profile_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/ic_launcher_background"
+            android:layout_margin="8dp"
+            android:layout_marginTop="20dp"
+            android:elevation="8dp"
+            app:cardCornerRadius="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_profile_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="@string/name_example"
-            android:textAppearance="?attr/textAppearanceListItem"
-            android:textColor="?attr/colorOnSurface"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/iv_profile_image"
-            app:layout_constraintTop_toTopOf="@+id/iv_profile_image" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_profile_address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/address_example"
-            android:textAppearance="?attr/textAppearanceListItemSecondary"
-            android:textColor="?attr/colorOnSurface"
-            app:layout_constraintStart_toStartOf="@+id/tv_profile_name"
-            app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />
+                <ImageView
+                    android:id="@+id/iv_profile_image"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:src="@tools:sample/avatars"
+                    android:contentDescription="@string/imgProfile" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_profile_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:text="@string/editProfile"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_profile_image"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_profile_image" />
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_profile_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_toEndOf="@id/iv_profile_image"
+                    android:textAppearance="?attr/textAppearanceListItem"
+                    android:textColor="?attr/colorOnSurface"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toEndOf="@+id/iv_profile_image"
+                    app:layout_constraintTop_toTopOf="@+id/iv_profile_image"
+                    tools:text="@string/name_example" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_profile_address"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_toEndOf="@id/iv_profile_image"
+                    android:maxLines="2"
+                    android:textAppearance="?attr/textAppearanceListItemSecondary"
+                    app:layout_constraintEnd_toStartOf="@id/btn_profile_edit"
+                    app:layout_constraintStart_toStartOf="@+id/tv_profile_name"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_profile_name"
+                    tools:text="@string/address_example" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_profile_edit"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:text="@string/editProfile"
+                    android:textAlignment="center"
+                    android:textAllCaps="false"
+                    app:cornerRadius="16dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/iv_profile_image"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/iv_profile_image"
+                    app:layout_constraintVertical_bias="0.814" />
+
+                <ImageView
+                    android:id="@+id/settings"
+                    android:layout_width="31dp"
+                    android:layout_height="31dp"
+                    android:contentDescription="@string/imgArticle"
+                    android:src="@drawable/ic_baseline_settings_24"
+                    app:layout_constraintBottom_toTopOf="@+id/btn_profile_edit"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.79"
+                    app:layout_constraintStart_toEndOf="@+id/tv_profile_name"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.263" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_iot_sensor_result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
             android:text="@string/tvIOTResult"
             android:textAlignment="center"
             android:textColor="?attr/colorOnSurface"
@@ -76,14 +114,14 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_profile_edit" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_container" />
 
         <ImageView
             android:id="@+id/iv_iot_result"
             android:layout_width="0dp"
             android:layout_height="300dp"
             android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="20dp"
             android:contentDescription="@string/imgIOT"
             android:scaleType="fitXY"
             android:src="@drawable/ic_launcher_background"
