--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,6 +24,7 @@
             app:tint="?attr/colorSurface" />
 
         <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/helloUser"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
