--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -33,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:maxLines="3"
+            android:textSize="16sp"
             android:textColor="?attr/colorOnSurface"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/article_image"
